--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://192.168.2.93/pruebaspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=sysopvnc
-spring.datasource.password=Indufar1920
+spring.datasource.url=jdbc:mysql://localhost/pruebaspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -9,9 +9,9 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 spring.jpa.properties.hibernate.create_empty_composites.enabled=true
 
-spring.mail.host=mail.indufar.com.py
-spring.mail.port=25
-spring.mail.username=control_ti@indufar.com.py
-spring.mail.password=vt4700tk
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=mail.indufar.com.py
+#spring.mail.port=25
+#spring.mail.username=control_ti@indufar.com.py
+#spring.mail.password=vt4700tk
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
